--- a/dev6/dev6/dev6.csproj
+++ b/dev6/dev6/dev6.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E522DE8F-EE62-4CF7-A1CA-8B08FFABBDD2}</ProjectGuid>
+    <ProjectGuid>{D4BD18C9-9D85-434B-A0E2-005B23A8ECA4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>dev4</RootNamespace>
-    <AssemblyName>dev4</AssemblyName>
+    <RootNamespace>dev6</RootNamespace>
+    <AssemblyName>dev6</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AveragePrice.cs" />
-    <Compile Include="AveragePriceOfType.cs" />
-    <Compile Include="Car.cs" />
-    <Compile Include="Commands.cs" />
-    <Compile Include="CountAll.cs" />
-    <Compile Include="CountTypes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlToJsonConversion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
