--- a/dev3/dev3/dev3.csproj
+++ b/dev3/dev3/dev3.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4BD18C9-9D85-434B-A0E2-005B23A8ECA4}</ProjectGuid>
+    <ProjectGuid>{B222455C-599A-4B74-A4C8-A915A2BE6843}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>dev6</RootNamespace>
-    <AssemblyName>dev6</AssemblyName>
+    <RootNamespace>dev3</RootNamespace>
+    <AssemblyName>dev3</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,12 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModuleConverter.cs" />
+    <Compile Include="Output.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlToJsonConversion.cs" />
+    <Compile Include="SignConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
