--- a/dev3/dev3Test/dev3Test.csproj
+++ b/dev3/dev3Test/dev3Test.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\dev3\dev3.csproj" />
+  </ItemGroup>
+
 </Project>
